[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentflow"
version = "1.0.0"
description = "TalentFlow - A talent management SaaS platform (Django debugging RL environment)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Terminal Bench", email = "bench@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "django-oauth-toolkit>=2.3",
    "celery>=5.3",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",
    "redis>=4.5",
    "django-redis>=5.3",
    "psycopg2-binary>=2.9",
    "psycopg2>=2.9",
    "PyJWT>=2.8",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    "factory-boy>=3.3",
    "Faker>=19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.1",
    "freezegun>=1.2",
    "responses>=0.23",
    "hypothesis>=6.82",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["talentflow*", "apps*", "environment*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "talentflow.settings.testing"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["apps", "talentflow"]
omit = ["*/tests/*", "*/migrations/*"]
