[workspace]
resolver = "2"
members = [
    "shared",
    "services/gateway",
    "services/auth",
    "services/orders",
    "services/matching",
    "services/risk",
    "services/positions",
    "services/market",
    "services/portfolio",
    "services/ledger",
    "services/alerts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QuantumCore Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp"] }

# Message queue
async-nats = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time series
influxdb2 = "0.4"

# Service discovery
etcd-client = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
bytes = "1.5"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
subtle = "2.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
