[package]
name = "vaultfs"
version = "0.1.0"
edition = "2021"
authors = ["VaultFS Team"]
description = "Distributed file storage service"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS/S3
aws-sdk-s3 = "1.10"
aws-config = "1.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
config = "0.13"
bytes = "1.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
subtle = "2.5"

# System
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"
tempfile = "3.9"
wiremock = "0.5"
serial_test = "3.0"

[[bin]]
name = "vaultfs"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
