[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
etcd-client.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio-test = "0.4"
