[package]
name = "gateway-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
hyper = { version = "1.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14"
