[package]
name = "orders-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
sqlx.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
