[package]
name = "risk-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
